--- a/public/index.html
+++ b/public/index.html
@@ -3,12 +3,14 @@
   <head>
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
       content="Web site created using create-react-app"
     />
+    <link href="https://fonts.googleapis.com/css?family=Muli:400,400i,500,600,700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700" rel="stylesheet">
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
@@ -24,6 +26,15 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/bootstrap-slider.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/layerslider.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/color.css" id="color-change">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/owl.carousel.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/font-awesome.min.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/fonts/flaticon/flaticon.css">
+    <link rel="stylesheet" type="text/css" href="%PUBLIC_URL%/assets/css/style.css">
     <title>React App</title>
   </head>
   <body>
@@ -39,5 +50,26 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+    <!--	Js Link
+    ============================================================-->
+    <script src="%PUBLIC_URL%/assets/js/jquery.min.js"></script>
+    <!--jQuery Layer Slider -->
+    <script src="%PUBLIC_URL%/assets/js/greensock.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/layerslider.transitions.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/layerslider.kreaturamedia.jquery.js"></script>
+    <!--jQuery Layer Slider -->
+    <script src="%PUBLIC_URL%/assets/js/popper.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/bootstrap.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/owl.carousel.min.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/tmpl.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.dependClass-0.1.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/draggable-0.1.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.slider.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/wow.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/YouTubePopUp.jquery.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/validate.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/jquery.cookie.js"></script>
+    <script src="%PUBLIC_URL%/assets/js/custom.js"></script>
+    <script src='https://kit.fontawesome.com/a076d05399.js'></script>
   </body>
 </html>
